--- a/themes/gatsby-theme-hyperobjekt-core/package.json
+++ b/themes/gatsby-theme-hyperobjekt-core/package.json
@@ -3,18 +3,26 @@
   "description": "Core Hyperobjekt theme for GatsbyJS designed to be used as an accelerated starting point in website development.",
   "version": "1.0.0",
   "author": "Lane Olson <laneolson@gmail.com>",
+  "main": "gatsby-config.js",
   "dependencies": {
+    "@emotion/core": "^10.0.35",
+    "@emotion/styled": "^10.0.27",
+    "@hyperobjekt/hooks": "1.0.8",
     "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
     "@mdx-js/mdx": "^1.6.18",
     "@mdx-js/react": "^1.6.18",
     "@reach/skip-nav": "^0.11.2",
+    "clsx": "^1.1.1",
     "gatsby-background-image": "^1.1.2",
     "gatsby-image": "^2.4.21",
     "gatsby-plugin-catch-links": "^2.3.15",
+    "gatsby-plugin-emotion": "^4.3.14",
     "gatsby-plugin-feed": "^2.5.14",
     "gatsby-plugin-manifest": "^2.4.33",
     "gatsby-plugin-mdx": "^1.2.46",
     "gatsby-plugin-mdx-embed": "^0.0.13",
+    "gatsby-plugin-netlify-cms": "^4.3.17",
     "gatsby-plugin-offline": "^3.2.30",
     "gatsby-plugin-page-creator": "^2.3.27",
     "gatsby-plugin-react-helmet": "^3.3.13",
@@ -36,6 +44,7 @@
     "gatsby-transformer-yaml": "^2.4.13",
     "katex": "^0.12.0",
     "mdx-embed": "^0.0.14",
+    "netlify-cms-app": "^2.13.1",
     "prop-types": "^15.7.2",
     "react-helmet": "^6.1.0",
     "react-icons": "^3.11.0",
@@ -44,14 +53,12 @@
     "remark-math": "^3.0.1",
     "remark-slug": "^6.0.0"
   },
-  "devDependencies": {
+  "peerDependencies": {
     "gatsby": "^2.24.58",
-    "prettier": "^2.0.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
   },
-  "peerDependencies": {
-    "gatsby": "^2.24.58",
+  "resolutions": {
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
   },
