update publish to use main branch

--- a/.github/workflows/publish-starters.yml
+++ b/.github/workflows/publish-starters.yml
@@ -1,7 +1,13 @@
 name: Publish Starters
-on: push
+on:
+  push:
+    branches:
+      - main
+    paths:
+      - "starters/**"
+      - ".github/**"
 jobs:
-  master:
+  main:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@master
