top layout modifications, theming

--- a/themes/gatsby-theme-hyperobjekt-core/package.json
+++ b/themes/gatsby-theme-hyperobjekt-core/package.json
@@ -12,6 +12,7 @@
     "@material-ui/icons": "^4.9.1",
     "@mdx-js/mdx": "^1.6.18",
     "@mdx-js/react": "^1.6.18",
+    "@n8tb1t/use-scroll-position": "^2.0.3",
     "@reach/skip-nav": "^0.11.2",
     "clsx": "^1.1.1",
     "gatsby-background-image": "^1.1.2",
@@ -22,7 +23,6 @@
     "gatsby-plugin-manifest": "^2.4.33",
     "gatsby-plugin-mdx": "^1.2.46",
     "gatsby-plugin-mdx-embed": "^0.0.13",
-    "gatsby-plugin-netlify-cms": "^4.3.17",
     "gatsby-plugin-offline": "^3.2.30",
     "gatsby-plugin-page-creator": "^2.3.27",
     "gatsby-plugin-react-helmet": "^3.3.13",
@@ -44,7 +44,6 @@
     "gatsby-transformer-yaml": "^2.4.13",
     "katex": "^0.12.0",
     "mdx-embed": "^0.0.14",
-    "netlify-cms-app": "^2.13.1",
     "prop-types": "^15.7.2",
     "react-helmet": "^6.1.0",
     "react-icons": "^3.11.0",
