--- a/.github/workflows/publish-starters.yml
+++ b/.github/workflows/publish-starters.yml
@@ -1,23 +1,31 @@
+# This is a basic workflow to help you get started with Actions
+
 name: Publish Starters
+
+# Controls when the action will run. Triggers the workflow on push
+# events but only for the main branch
 on:
   push:
-    branches:
-      - main
-    paths:
-      - "starters/**"
-      - ".github/**"
+    branches: [ main ]
+
+# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  main:
+  # This workflow contains a single job called "build"
+  build:
+    # The type of runner that the job will run on
     runs-on: ubuntu-latest
+
+    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      - uses: actions/checkout@master
-      - uses: actions/setup-node@v1
-        with:
-          node-version: "10.x"
-      - name: publish:starters
-        uses: johno/actions-push-subdirectories@master
-        env:
-          API_TOKEN_GITHUB: ${{ secrets.API_TOKEN_GITHUB }}
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          args: starters Lane
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - uses: actions/checkout@v2
+
+      # Runs a single command using the runners shell
+      - name: Install dependencies
+        run: sudo apt-get update && sudo apt-get install jq
+
+      # Runs a set of commands using the runners shell
+      - name: Publish starter to separate repo
+        run: |
+          chmod +x ./scripts/publish-starters.sh
+          ./scripts/publish-starters.sh
