--- a/themes/gatsby-theme-hyperobjekt-core/package.json
+++ b/themes/gatsby-theme-hyperobjekt-core/package.json
@@ -5,8 +5,6 @@
   "author": "Lane Olson <laneolson@gmail.com>",
   "main": "gatsby-config.js",
   "dependencies": {
-    "@emotion/core": "^10.0.35",
-    "@emotion/styled": "^10.0.27",
     "@hyperobjekt/hooks": "1.0.8",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
@@ -18,7 +16,6 @@
     "gatsby-background-image": "^1.1.2",
     "gatsby-image": "^2.4.21",
     "gatsby-plugin-catch-links": "^2.3.15",
-    "gatsby-plugin-emotion": "^4.3.14",
     "gatsby-plugin-feed": "^2.5.14",
     "gatsby-plugin-manifest": "^2.4.33",
     "gatsby-plugin-mdx": "^1.2.46",
@@ -44,6 +41,7 @@
     "gatsby-transformer-yaml": "^2.4.13",
     "katex": "^0.12.0",
     "mdx-embed": "^0.0.14",
+    "prism-react-renderer": "^1.1.1",
     "prop-types": "^15.7.2",
     "react-helmet": "^6.1.0",
     "react-icons": "^3.11.0",
