--- a/.github/workflows/publish-starters.yml
+++ b/.github/workflows/publish-starters.yml
@@ -6,7 +6,7 @@ name: Publish Starters
 # events but only for the main branch
 on:
   push:
-    branches: [ main ]
+    branches: [main]
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -27,5 +27,7 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: Publish starter to separate repo
         run: |
+          git config user.name github-actions
+          git config user.email github-actions@github.com
           chmod +x ./scripts/publish-starters.sh
           ./scripts/publish-starters.sh
