--- a/starters/gatsby-starter-hyperobjekt/package.json
+++ b/starters/gatsby-starter-hyperobjekt/package.json
@@ -6,8 +6,9 @@
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "gatsby": "^2.24.58",
-    "gatsby-theme-hyperobjekt-core": "^1.0.6",
     "gatsby-plugin-netlify-cms": "^4.3.17",
+    "gatsby-theme-hyperobjekt-core": "^1.0.6",
+    "mdx-scoped-runtime": "^0.7.5",
     "netlify-cms-app": "^2.13.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
