--- a/themes/gatsby-theme-hyperobjekt-core/package.json
+++ b/themes/gatsby-theme-hyperobjekt-core/package.json
@@ -3,7 +3,7 @@
   "description": "Core Hyperobjekt theme for GatsbyJS designed to be used as an accelerated starting point in website development.",
   "version": "1.0.12",
   "author": "Lane Olson <laneolson@gmail.com>",
-  "main": "gatsby-config.js",
+  "main": "index.js",
   "dependencies": {
     "@hyperobjekt/hooks": "1.0.8",
     "@material-ui/core": "^4.11.0",
