--- a/themes/gatsby-theme-hyperobjekt-core/package.json
+++ b/themes/gatsby-theme-hyperobjekt-core/package.json
@@ -5,49 +5,49 @@
   "author": "Lane Olson <laneolson@gmail.com>",
   "main": "index.js",
   "dependencies": {
-    "@hyperobjekt/hooks": "1.0.8",
-    "@material-ui/core": "^4.11.0",
-    "@material-ui/icons": "^4.9.1",
-    "@mdx-js/mdx": "^1.6.18",
-    "@mdx-js/react": "^1.6.18",
+    "@hyperobjekt/hooks": "1.0.10",
+    "@material-ui/core": "^4.11.3",
+    "@material-ui/icons": "^4.11.2",
+    "@mdx-js/mdx": "^1.6.22",
+    "@mdx-js/react": "^1.6.22",
     "@n8tb1t/use-scroll-position": "^2.0.3",
-    "@reach/skip-nav": "^0.11.2",
+    "@reach/skip-nav": "^0.13.2",
     "clsx": "^1.1.1",
-    "gatsby-background-image": "^1.1.2",
-    "gatsby-image": "^2.4.21",
-    "gatsby-plugin-catch-links": "^2.3.15",
-    "gatsby-plugin-feed": "^2.5.14",
-    "gatsby-plugin-manifest": "^2.4.33",
-    "gatsby-plugin-mdx": "1.2",
-    "gatsby-plugin-mdx-embed": "^0.0.13",
-    "gatsby-plugin-offline": "^3.2.30",
-    "gatsby-plugin-page-creator": "^2.3.27",
-    "gatsby-plugin-react-helmet": "^3.3.13",
-    "gatsby-plugin-robots-txt": "^1.5.3",
-    "gatsby-plugin-sharp": "^2.6.38",
-    "gatsby-plugin-sitemap": "^2.4.14",
-    "gatsby-remark-copy-linked-files": "^2.3.19",
+    "gatsby-background-image": "^1.5.0",
+    "gatsby-plugin-catch-links": "^3.0.0",
+    "gatsby-plugin-feed": "^3.0.0",
+    "gatsby-plugin-image": "^1.0.1",
+    "gatsby-plugin-manifest": "^3.0.0",
+    "gatsby-plugin-mdx": "2.0.1",
+    "gatsby-plugin-mdx-embed": "^0.0.19",
+    "gatsby-plugin-page-creator": "^3.0.0",
+    "gatsby-plugin-react-helmet": "^4.0.0",
+    "gatsby-plugin-robots-txt": "^1.5.5",
+    "gatsby-plugin-sharp": "^3.0.1",
+    "gatsby-plugin-sitemap": "^3.0.0",
+    "gatsby-remark-copy-linked-files": "^3.0.0",
     "gatsby-remark-external-links": "^0.0.4",
-    "gatsby-remark-images": "^3.3.32",
-    "gatsby-remark-katex": "^3.3.13",
+    "gatsby-remark-images": "^4.0.0",
+    "gatsby-remark-katex": "^4.0.0",
     "gatsby-remark-reading-time": "^1.1.0",
     "gatsby-remark-relative-images": "^2.0.2",
-    "gatsby-remark-responsive-iframe": "^2.4.17",
-    "gatsby-remark-smartypants": "^2.3.13",
-    "gatsby-source-filesystem": "^2.3.32",
+    "gatsby-remark-responsive-iframe": "^3.0.0",
+    "gatsby-remark-smartypants": "^3.0.0",
+    "gatsby-source-filesystem": "^3.0.0",
     "gatsby-theme-material-ui": "^1.0.13",
-    "gatsby-transformer-json": "^2.4.14",
-    "gatsby-transformer-sharp": "^2.5.14",
-    "gatsby-transformer-yaml": "^2.4.13",
-    "katex": "^0.12.0",
-    "mdx-embed": "^0.0.14",
-    "prism-react-renderer": "^1.1.1",
+    "gatsby-transformer-json": "^3.0.0",
+    "gatsby-transformer-sharp": "^3.0.0",
+    "gatsby-transformer-yaml": "^3.0.0",
+    "katex": "^0.13.0",
+    "mdx-embed": "^0.0.19",
+    "path-browserify": "^1.0.1",
+    "prism-react-renderer": "^1.2.0",
     "prop-types": "^15.7.2",
     "react-helmet": "^6.1.0",
     "react-icons": "^3.11.0",
-    "react-scroll": "^1.8.1",
+    "react-scroll": "^1.8.2",
     "rehype-katex": "^4.0.0",
-    "remark-math": "^3.0.1",
+    "remark-math": "^4.0.0",
     "remark-slug": "^6.0.0"
   },
   "peerDependencies": {
